# SOAX

./: .hgignore  .hgtags  CMakeLists.txt  COPYING  LICENSE  README.md  analysis_options_dialog.cc  analysis_options_dialog.h  batch_droplet_intensity.cc  batch_evaluate_gt.cc  batch_length.cc  batch_resample.cc  batch_snapshots.cc  batch_soax.cc  best_snake.cc  best_t.cc  droplet_info.cc  droplet_info.h  droplet_info_dict.cc  droplet_info_dict.h  droplet_intensity_fractions.cc  evaluate.cc  evaluate_f.cc  evaluate_gt.cc  global.h  gt_f_value.cc  gui.cc  icons.qrc  image_local_snr.cc  image_snr.cc  junctions.cc  junctions.h  license.txt  main_window.cc  main_window.h  multisnake.cc  multisnake.h  parameters_dialog.cc  parameters_dialog.h  result_f_value.cc  (+18 more)
icon/: COPYING  letter-x.icns
